fix/e2e-tests-in-production (#59)
* Fix e2e tests execution in production and part of the flakiness

* Add id on top of testid to form elements

* Rename method

* Fix jackson warnings